--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ footer {
     width: 90%;
     padding: 10px 5px;
     border-radius: 5px;
-    margin: auto;
+    margin: 10px auto;
   }
   .box h3 {
     margin: 10px auto;
